--- a/microservices/ui/app/package.json
+++ b/microservices/ui/app/package.json
@@ -5,9 +5,14 @@
   "dependencies": {
     "@material-ui/core": "^3.0.3",
     "@material-ui/icons": "^3.0.1",
-    "prop-types": "^15.6.2",
+    "apollo-boost": "^0.1.16",
+    "apollo-cache-inmemory": "^1.2.10",
+    "graphql": "^14.0.2",
     "react": "^16.5.1",
+    "react-apollo": "^2.1.11",
     "react-dom": "^16.5.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.5"
   },
   "scripts": {
