--- a/conf/notify.yaml
+++ b/conf/notify.yaml
@@ -7,7 +7,7 @@
 
 email:
   # default can take values 'smtp', 'sparkPost' or 'mandrill'
-  default: null
+  default: "sparkPost"
   providers:
     hasura:
       authToken:
