Added hasura check auth and basic auth states.

--- a/conf/auth.yaml
+++ b/conf/auth.yaml
@@ -1,4 +1,4 @@
-# Configuration for Hasura Auth
+# Configuration for Hasura auth
 
 # All values in this configuration are strings, including boolean and integer
 # values.
