--- a/microservices/ui/app/package.json
+++ b/microservices/ui/app/package.json
@@ -10,6 +10,7 @@
     "graphql": "^14.0.2",
     "react": "^16.5.1",
     "react-apollo": "^2.1.11",
+    "react-check-auth": "^0.2.0-alpha.2",
     "react-dom": "^16.5.1",
     "react-material-ui-form-validator": "^2.0.1",
     "react-router": "^4.3.1",
