--- a/microservices/ui/app/package.json
+++ b/microservices/ui/app/package.json
@@ -8,6 +8,7 @@
     "apollo-boost": "^0.1.16",
     "apollo-cache-inmemory": "^1.2.10",
     "graphql": "^14.0.2",
+    "prop-types": "^15.6.2",
     "react": "^16.5.1",
     "react-apollo": "^2.1.11",
     "react-check-auth": "^0.2.0-alpha.2",
