--- a/microservices/ui/k8s.yaml
+++ b/microservices/ui/k8s.yaml
@@ -5,9 +5,9 @@ items:
   metadata:
     creationTimestamp: null
     labels:
-      app: ui
+      app: '{{ microservice.name }}'
       hasuraService: custom
-    name: ui
+    name: '{{ microservice.name }}'
     namespace: '{{ cluster.metadata.namespaces.user }}'
   spec:
     replicas: 1
@@ -16,12 +16,12 @@ items:
       metadata:
         creationTimestamp: null
         labels:
-          app: ui
+          app: '{{ microservice.name }}'
       spec:
         containers:
-        - image: hasura/hello-world:latest
+        - image: hasura/base-git-image:0.7
           imagePullPolicy: IfNotPresent
-          name: ui
+          name: '{{ microservice.name }}'
           ports:
           - containerPort: 8080
             protocol: TCP
@@ -34,9 +34,9 @@ items:
   metadata:
     creationTimestamp: null
     labels:
-      app: ui
+      app: '{{ microservice.name }}'
       hasuraService: custom
-    name: ui
+    name: '{{ microservice.name }}'
     namespace: '{{ cluster.metadata.namespaces.user }}'
   spec:
     ports:
@@ -44,7 +44,7 @@ items:
       protocol: TCP
       targetPort: 8080
     selector:
-      app: ui
+      app: '{{ microservice.name }}'
     type: ClusterIP
   status:
     loadBalancer: {}
