Added domain config.

--- a/conf/routes.yaml
+++ b/conf/routes.yaml
@@ -217,3 +217,14 @@
       path: /
       port: 80
     corsPolicy: allow_all
+
+# Configure route for main domain
+- subdomain: @
+  paths:
+  - path: /
+    upstreamService:
+      name: ui
+      namespace: {{ cluster.metadata.namespaces.user }}
+      path: /
+      port: 80
+    corsPolicy: allow_all
