Added domain config.

--- a/conf/routes.yaml
+++ b/conf/routes.yaml
@@ -217,3 +217,13 @@
       path: /
       port: 80
   subdomain: ""
+
+- paths:
+  - corsPolicy: allow_all
+    path: /
+    upstreamService:
+      name: ui
+      namespace: '{{ cluster.metadata.namespaces.user }}'
+      path: /
+      port: 80
+  subdomain: "www"
