--- a/microservices/postio/k8s.yaml
+++ b/microservices/postio/k8s.yaml
@@ -41,39 +41,39 @@ items:
   spec:
     ports:
     - port: 25
-      name: 'SMTP'
+      name: 'smtp'
       protocol: TCP
       targetPort: 25
     - port: 80
-      name: 'HTTP'
+      name: 'http'
       protocol: TCP
       targetPort: 80
     - port: 443
-      name: 'HTTPS'
+      name: 'https'
       protocol: TCP
       targetPort: 443
     - port: 110
-      name: 'POP3'
+      name: 'pop3'
       protocol: TCP
       targetPort: 110
     - port: 143
-      name: 'IMAP'
+      name: 'imap'
       protocol: TCP
       targetPort: 143
     - port: 465
-      name: 'SMTPS'
+      name: 'smtps'
       protocol: TCP
       targetPort: 465
     - port: 587
-      name: 'MSA'
+      name: 'msa'
       protocol: TCP
       targetPort: 587
     - port: 993
-      name: 'IMAPS'
+      name: 'imaps'
       protocol: TCP
       targetPort: 993
     - port: 995
-      name: 'POP3S'
+      name: 'pop3s'
       protocol: TCP
       targetPort: 995
     selector:
