Fixed mail ports

--- a/conf/routes.yaml
+++ b/conf/routes.yaml
@@ -232,10 +232,10 @@
   - corsPolicy: allow_all
     path: /
     upstreamService:
-      name: postio
+      name: post
       namespace: '{{ cluster.metadata.namespaces.user }}'
       path: /
       port: 80
-  subdomain: postio
+  subdomain: post
 
 
