--- a/conf/notify.yaml
+++ b/conf/notify.yaml
@@ -7,7 +7,7 @@
 
 email:
   # default can take values 'smtp', 'sparkPost' or 'mandrill'
-  default: "sparkPost"
+  default: "smtp"
   providers:
     hasura:
       authToken:
@@ -20,7 +20,7 @@ email:
           key: notify.mandrill.key
           name: hasura-secrets
     smtp:
-      hostname: ""
+      hostname: "smtp.zoho.com"
       password:
         secretKeyRef:
           key: notify.smtp.password
