--- a/conf/auth.yaml
+++ b/conf/auth.yaml
@@ -62,7 +62,7 @@ email:
   # used by the auth service to inject the actual token when sending the email.
   verifyTemplate: |
     Hi, Please click on <br/>
-    https://auth.xmartdelivery.com/v1/providers/email/verify-email?token={{ "{{token}}" }}
+    https://xmartdelivery.com/verify-email?token={{ "{{token}}" }}
     to verify your email.
   # Email verification token expiry time in days
   verifyTokenExpires: "7"
@@ -78,7 +78,7 @@ email:
   # used by the auth service to inject the actual token when sending the email.
   forgotPassTemplate: |
     Hi, <br/> Click on
-    https://auth.xmartdelivery.com/v1/providers/email/reset-password?token={{ "{{token}}" }}
+    https://xmartdelivery.com/reset-password?token={{ "{{token}}" }}
     to reset your password.
   # Forgot password reset token expiry time in days
   resetTokenExpires: "7"
