Updated register flow and added signup webhooks

--- a/conf/auth.yaml
+++ b/conf/auth.yaml
@@ -39,6 +39,10 @@ defaultProviders:
     enabled: "false"
     defaultRoles: []
 
+# Auth webhook configuration
+authorizationHooks:
+  preSignupHook: 'http://webhook.default/webhooks/signup'
+
 # Session related configuration
 session:
   # Name of the cookie. This is usually set to your cluster's domain. No need
