--- a/conf/routes.yaml
+++ b/conf/routes.yaml
@@ -208,6 +208,16 @@
       port: 80
     corsPolicy: allow_all
 
+- subdomain: webhook
+  paths:
+    - path: /
+      upstreamService:
+        name: webhook
+        namespace: {{ cluster.metadata.namespaces.hasura }}
+        path: /
+        port: 80
+      corsPolicy: allow_all
+
 - paths:
   - corsPolicy: allow_all
     path: /
