Added route for webhook container

--- a/conf/routes.yaml
+++ b/conf/routes.yaml
@@ -212,6 +212,15 @@
   - corsPolicy: allow_all
     path: /
     upstreamService:
+      name: webhook
+      namespace: '{{ cluster.metadata.namespaces.user }}'
+      path: /
+      port: 80
+
+- paths:
+  - corsPolicy: allow_all
+    path: /
+    upstreamService:
       name: ui
       namespace: '{{ cluster.metadata.namespaces.user }}'
       path: /
