Added route for webhook container

--- a/conf/routes.yaml
+++ b/conf/routes.yaml
@@ -208,14 +208,15 @@
       port: 80
     corsPolicy: allow_all
 
-- paths:
-  - corsPolicy: allow_all
-    path: /webhooks
+- subdomain: webhook
+  paths:
+  - path: /
     upstreamService:
       name: webhook
       namespace: '{{ cluster.metadata.namespaces.user }}'
       path: /
       port: 80
+    corsPolicy: allow_all
 
 - paths:
   - corsPolicy: allow_all
