Removed webhook stuff for now

--- a/conf/auth.yaml
+++ b/conf/auth.yaml
@@ -40,8 +40,8 @@ defaultProviders:
     defaultRoles: []
 
 # Auth webhook configuration
-authorizationHooks:
-  preSignupHook: 'http://webhook.default/webhooks/signup'
+# authorizationHooks:
+#  preSignupHook: 'http://webhook.default/webhooks/signup'
 
 # Session related configuration
 session:
