--- a/clusters.yaml
+++ b/clusters.yaml
@@ -1,5 +1,5 @@
 clusters:
-- alias: freshdrop
+- alias: hasura
   data: null
   infra:
     nodes:
@@ -13,7 +13,7 @@ clusters:
     - name: postgres
       size: 10
     - name: filestore
-      size: 1
+      size: 10
     - name: sessionstore
-      size: 1
+      size: 2
 version: v1
