--- a/conf/domains.yaml
+++ b/conf/domains.yaml
@@ -8,10 +8,10 @@
       account: {{ cluster.name }}
 
 - domain: xmartdelivery.com
-  ssl:
-    conf:
-      account: {{ cluster.name }}
-    type: LetsEncrypt
+  ssl: null
+#    conf:
+#      account: {{ cluster.name }}
+#    type: LetsEncrypt
 
 # Point your own domain to the IP of the cluster and add the domain here
 # Example configuration for domain with free SSL certs from LetsEncypt
