--- a/conf/domains.yaml
+++ b/conf/domains.yaml
@@ -7,11 +7,11 @@
     conf:
       account: {{ cluster.name }}
 
-- domain: xmartdelivery.com
-  ssl:
-    conf:
-      account: {{ cluster.name }}
-    type: LetsEncrypt
+# - domain: xmartdelivery.com
+# ssl:
+#    conf:
+#      account: {{ cluster.name }}
+#    type: LetsEncrypt
 
 # Point your own domain to the IP of the cluster and add the domain here
 # Example configuration for domain with free SSL certs from LetsEncypt
