--- a/microservices/ui/app/package.json
+++ b/microservices/ui/app/package.json
@@ -9,14 +9,15 @@
     "apollo-cache-inmemory": "^1.3.6",
     "graphql": "^14.0.2",
     "prop-types": "^15.6.2",
-    "react": "^16.5.2",
+    "react": "^16.8.2",
     "react-apollo": "^2.2.4",
+    "react-async": "^4.1.1",
     "react-check-auth": "^0.2.0-alpha.2",
-    "react-dom": "^16.5.2",
+    "react-dom": "^16.8.2",
     "react-material-ui-form-validator": "^2.0.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "2.1.5",
     "shopify-buy": "^2.0.1"
   },
   "scripts": {
@@ -24,5 +25,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
