--- a/microservices/ui-next/app/package.json
+++ b/microservices/ui-next/app/package.json
@@ -7,11 +7,13 @@
     "@material-ui/icons": "^3.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
+    "react-async": "^6.0.1",
     "react-check-auth": "^0.2.0-alpha.2",
     "react-dom": "^16.8.5",
     "react-material-ui-form-validator": "^2.0.7",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "shopify-buy": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
