--- a/microservices/ui/app/package.json
+++ b/microservices/ui/app/package.json
@@ -1,30 +1,28 @@
 {
-  "name": "react-app",
+  "name": "app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.3.0",
-    "@material-ui/icons": "^3.0.1",
-    "apollo-boost": "^0.1.17",
-    "apollo-cache-inmemory": "^1.3.6",
-    "graphql": "^14.0.2",
-    "prop-types": "^15.6.2",
-    "react": "^16.8.2",
-    "react-apollo": "^2.2.4",
-    "react-async": "^4.1.1",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.5",
+    "react-async": "^6.0.1",
     "react-check-auth": "^0.2.0-alpha.2",
-    "react-dom": "^16.8.2",
-    "react-material-ui-form-validator": "^2.0.2",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5",
-    "shopify-buy": "^2.0.1"
+    "react-dom": "^16.8.5",
+    "react-material-ui-form-validator": "^2.0.7",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "shopify-buy": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   },
   "browserslist": [
     ">0.2%",
