--- a/microservices/ui/app/package.json
+++ b/microservices/ui/app/package.json
@@ -11,8 +11,10 @@
     "react-check-auth": "^0.2.0-alpha.2",
     "react-dom": "^16.8.5",
     "react-material-ui-form-validator": "^2.0.7",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
     "shopify-buy": "^2.2.0"
   },
   "scripts": {
