--- a/microservices/ui/app/package.json
+++ b/microservices/ui/app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "eslint-plugin-react": "^7.12.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-async": "^6.0.1",
@@ -14,7 +15,9 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-transition-group": "^1.2.1",
     "redux": "^4.0.1",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "shopify-buy": "^2.2.0"
   },
