--- a/microservices/ui-next/package.json
+++ b/microservices/ui-next/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.0.0-beta.0",
+    "@material-ui/icons": "^4.0.0-beta.0",
     "react": "^16.8.6",
+    "react-check-auth": "^0.2.0-alpha.2",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-material-ui-form-validator": "^2.0.8",
+    "react-redux": "^7.0.3",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.0",
+    "react-transition-group": "^4.0.0",
+    "redux": "^4.0.1",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0",
+    "shopify-buy": "^2.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
