--- a/microservices/ui/app/package.json
+++ b/microservices/ui/app/package.json
@@ -16,7 +16,8 @@
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "shopify-buy": "^2.2.2"
+    "shopify-buy": "^2.2.2",
+    "use-react-router": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
